Remove auth functionality from showtime API
